# Gogomoku

./: .gitignore  CMakeLists.txt  INSTALL  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
java/: Main.java  Makefile
java/field/: Field.java
java/game/: Game.java
java/gameboard/: Gameboard.java
java/history/: History.java
java/pawn/: BlackPawn.java  Pawn.java  WhitePawn.java
java/playState/: PlayState.java
po/: CMakeLists.txt
src/: CMakeLists.txt  Explosion.qml  GameView.qml  Tile.qml  board.h  color.h  field.cpp  field.h  game.cpp  game.h  gameboard.cpp  gameboard.h  gogomoku.qrc  gui.h  history.cpp  history.h  interface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move.h  pawn.cpp  pawn.h  playstate.h  table.qml
